@@ -76,6 +76,7 @@ This feature was developed by Karl Hobley and Matt Westcott.
  * Ensure `for_user` argument is passed to the form class when previewing pages (Matt Westcott)
  * Ensure the capitalisation of the `timesince_simple` tag is consistently added in the template based on usage in context (Stefan Hammer)
  * Add missing translation usage for the `timesince_last_update` and ensure the translated labels can be easier to work with in Transifex (Stefan Hammer)
+ * Add additional checks for duplicate form field `clean_name` values in the Form Builder validation and increase performance of checks (Dan Bentley)
 
 ## Upgrade considerations
 
